chore(test): consolidate flash tests; extract TestEditorWindow